# typego_ros_sdk

./: .gitignore  Makefile  README.md
config/: cyclonedds_shm.xml
docker/: .env  Dockerfile  Dockerfile-jetson
scripts/: scan_visualize.py
scripts/assets/: lidar.yaml  scan.yaml
src/go2_sdk/: CMakeLists.txt  package.xml
src/go2_sdk/config/: custom_nav_through_pose_bt.xml  nav2_params.yaml
src/go2_sdk/include/go2_sdk/: namespace_utils.hpp
src/go2_sdk/launch/: nav2_launch.py  slam_launch.py
src/go2_sdk/resource/Map-4th-full/: waypoints.csv
src/go2_sdk/scripts/: run-base.sh  run.sh
src/go2_sdk/src/: cmd_vel_controller.cpp  lidar_client.cpp  lidar_full_client.cpp  lidar_service.cpp  tf_service.cpp  video_service.cpp  waypoints_service.cpp
src/kami_sdk/: CMakeLists.txt  package.xml
src/kami_sdk/scripts/: odom.py  rotate.py  run.sh
src/kami_sdk/src/: cmd_vel_controller.cpp  lidar_client.cpp  lidar_service.cpp  tf_service.cpp
src/typego_interface/: CMakeLists.txt  package.xml
src/typego_interface/msg/: WayPoint.msg
src/typego_sdk/: CMakeLists.txt  package.xml
src/typego_sdk/config/: custom_nav_through_pose_bt.xml  custom_nav_to_pose_bt.xml  nav2_params.yaml  slam.rviz  slam.yaml
src/typego_sdk/include/typego_sdk/: namespace_utils.hpp
src/typego_sdk/launch/: nav2_launch.py  slam_launch.py
src/typego_sdk/resource/Map-4th-full/: 4th-full.data  init_pose.json  waypoints.csv
src/typego_sdk/resource/Map-4th-partial/: 4th-partial.data  init_pose.json  waypoints.csv
src/typego_sdk/scripts/: run-base.sh  run.sh
src/typego_sdk/src/: get_position.cpp  waypoints_service.cpp
